# gpcl

./: Cargo.toml  LICENSE  README.md  build.rs
res/: appicon-list.slint  appicon.slint  background.slint  gamepad-list.slint  gamepad.slint  main.qml  main.slint  style.slint
src/: clock.rs  config.rs  main.rs  qml_bridge.rs  qml_types.rs  slint_bridge.rs  slint_models.rs  winit.rs
src/gamepad_manager/: filter_axis_to_dpad_buttons.rs  filter_dpad_button_events.rs  gamepad_item.rs  gamepad_list_model.rs  gamepad_manager_impl.rs  keymap.rs  mod.rs  model.rs  q_gui_app_event.rs
src/launcher/: app_list_model.rs  launcher_impl.rs  mod.rs  model.rs
