[package]
name = "gpcl"
description = "Gamepad controlled application launcher written in Rust & Slint"
version = "0.6.1"
edition = "2021"
license = "MIT"
readme = "README.md"

[features]
default = ["wayland"]
wayland = ["slint/backend-winit-wayland"]
x11 = ["slint/backend-winit-x11"]

[dependencies]
slint = { version = "1.3", default-features = false, features = ["std", "renderer-winit-femtovg", "compat-1-0",] }
i-slint-backend-winit = "1.3"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
xdg = "2.5"
gilrs = "0.10"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

[build-dependencies]
slint-build = "1.3"