[package]
name = "gpcl"
description = "Gamepad controlled application launcher written in Rust & Slint"
version = "0.8.3"
edition = "2021"
license = "MIT"
readme = "README.md"

[features]
default = ["wayland"]
wayland = ["slint/backend-winit-wayland"]
x11 = ["slint/backend-winit-x11"]

[dependencies]
slint = { version = "=1.13.1", default-features = false, features = ["renderer-femtovg", "compat-1-2"] }
i-slint-backend-winit = "=1.13.1"
toml = "0.9"
serde = "1.0"
serde_derive = "1.0"
xdg = "3"
gilrs = "0.11"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
hex_color = "3.0.0"

[build-dependencies]
slint-build = "=1.13.1"